--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/personality",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Personality tool for Editor.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -10,6 +10,11 @@
     "type": "git",
     "url": "git+https://github.com/editor-js/personality.git"
   },
+  "author": {
+    "name": "CodeX",
+    "email": "team@codex.so"
+  },
+  "main": "./dist/bundle.js",
   "keywords": [
     "redactor",
     "codex editor",
@@ -25,17 +30,13 @@
   "homepage": "https://github.com/editor-js/personality#readme",
   "devDependencies": {
     "@codexteam/ajax": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^5.9.0",
+    "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
     "eslint-config-codex": "github:codex-team/eslint-config",
-    "eslint-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "eslint-loader": "^2.2.1",
+    "file-loader": "^4.1.0",
     "formidable": "^1.2.1",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
-    "postcss-smart-import": "^0.6.12",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
