Add the babel loaders in package.json

--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
   },
   "homepage": "https://github.com/editor-js/personality#readme",
   "devDependencies": {
+    "@babel/core": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
     "@codexteam/ajax": "^4.0.1",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "eslint": "^6.1.0",
     "eslint-config-codex": "github:codex-team/eslint-config",
     "eslint-loader": "^2.2.1",
     "file-loader": "^4.1.0",
     "formidable": "^1.2.1",
+    "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
