--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/personality",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Personality tool for Editor.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -29,14 +29,20 @@
   },
   "homepage": "https://github.com/editor-js/personality#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@codexteam/ajax": "^4.0.1",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.1.0",
     "eslint": "^6.1.0",
     "eslint-config-codex": "github:codex-team/eslint-config",
     "eslint-loader": "^2.2.1",
     "file-loader": "^4.1.0",
     "formidable": "^1.2.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
+    "postcss-smart-import": "^0.7.6",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
